# libiris-core

./: Cargo.toml  README.md
src/: lib.rs  process.rs  worker.rs
src/linux/: handle.rs  mod.rs  process.rs
src/windows/: handle.rs  mod.rs  proc_thread_attribute_list.rs  process.rs  sid.rs
